21 - graph view - toolbar and those styles

--- a/Editor Default Resources/DialogueSystem/DSNodeStyles.uss
+++ b/Editor Default Resources/DialogueSystem/DSNodeStyles.uss
@@ -20,7 +20,7 @@
 
 /* INPUTS */
 
-.ds-node_textfield >.unity-text-field_input
+.ds-node_textfield >.unity-text-field__input
 {
     background-color: var(--ds-color-window-dark-grey-1);
     border-color: var(--ds-color-window-dark-grey-6);
@@ -30,30 +30,30 @@
     padding: var(--ds-metrics-window-pixels-8);
 }
 
-.ds-node_textfield_hidden >.unity-text-field_input
+.ds-node_textfield_hidden >.unity-text-field__input
 {
     background-color: transparent;
     border-color: transparent;
 }
 
-.ds-node_textfield_hidden >.unity-text-field_input:focus
+.ds-node_textfield_hidden >.unity-text-field__input:focus
 {
     background-color: var(--ds-color-window-dark-grey-1);
     border-color: var(--ds-color-window-dark-grey-6);
 }
 
-.ds-node_filename-textfield >.unity-text-field_input
+.ds-node_filename-textfield >.unity-text-field__input
 {
     max-width: var(--ds-metrics-window-pixels-1000);
 }
 
-.ds-node_filename-textfield >.unity-text-field_input:focus
+.ds-node_filename-textfield >.unity-text-field__input:focus
 {
     margin: var(--ds-metrics-window-pixels-4);
     padding: var(--ds-metrics-window-pixels-4);
 }
 
-.ds-node_choice-textfield >.unity-text-field_input
+.ds-node_choice-textfield >.unity-text-field__input
 {
     font-size: var(--ds-metrics-window-pixels-11);
     height: var(--ds-metrics-window-pixels-35);
@@ -61,7 +61,7 @@
     min-width: var(--ds-metrics-window-pixels-0);
 }
 
-.ds-node_choice-textfield >.unity-text-field_input:focus
+.ds-node_choice-textfield >.unity-text-field__input:focus
 {
     height:var(--ds-metrics-window-pixels-25);
     margin-left: var(--ds-metrics-window-pixels-4);
@@ -70,7 +70,7 @@
 
 /* DIALOGUE ELEMENT */
 
-.ds-node_quote-textfield >.unity-text-field_input
+.ds-node_quote-textfield >.unity-text-field__input
 {
     background-color: var(--ds-color-window-dark-grey-4);
     border-color: transparent;
@@ -80,11 +80,11 @@
     max-width: var(--ds-metrics-window-pixels-600);
 }
 
-.ds-node_quote-textfield >.unity-text-field_input:hover
+.ds-node_quote-textfield >.unity-text-field__input:hover
 {
     background-color: var(--ds-color-window-dark-grey-5);
 }
-.ds-node_quote-textfield >.unity-text-field_input:focus
+.ds-node_quote-textfield >.unity-text-field__input:focus
 {
     background-color: var(--ds-color-window-dark-grey-1);
     border-color: var(--ds-color-window-dark-grey-6);
@@ -103,7 +103,7 @@
 {
     background-color: #2B3D2F;
 }
-.ds-node_button:hover
+.ds-node_button:active
 {
     background-color: var(--ds-color-window-dark-grey-3);
     color: var(--ds-color-window-yellow);
